# opendoorstation_esp-idf-firmware

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  Ideas.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  build_and_run_tests.bat  build_full_test_suite.bat  build_test_mode.bat  build_tests_only.bat  build_with_env.bat  build_with_idf.bat  clean_build.bat  diagnose_com_ports.bat  find_device.bat  flash_and_run_tests.bat  flash_and_run_tests_com7.bat  flash_full_test_suite_com7.bat  install_esp_idf.bat  monitor_com3.bat  monitor_com7.bat  monitor_tests.bat  partitions.csv  prepare_device_for_flash.bat  project_description.txt  reset_and_flash_com7.bat  reset_and_test.bat  reset_device.bat  sdkconfig.defaults  sdkconfig.minimal  setup_env.bat  setup_git.bat  switch_to_normal_mode.bat  (+7 more)
.github/workflows/: build.yml
.kiro/specs/sip-door-station/: design.md  requirements.md  tasks.md
components/sip_client/include/: CMakeLists.txt  sip_client.c  sip_client.h
firmware/: config.env  flash_app_args  flash_args.in  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  otadata-flash_args  project_description.json
firmware/bootloader-prefix/src/bootloader-stamp/: bootloader-source_dirinfo.txt
firmware/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
firmware/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
firmware/esp-idf/app_update/: otadata-flash_args.in
firmware/esp-idf/esptool_py/: flasher_args.json.in
firmware/gdbinit/: gdbinit  symbols
firmware/log/: idf_py_stderr_output_6844  idf_py_stdout_output_6844
main/: CMakeLists.txt  app_controller.c  app_controller.h  app_main.c  app_main_backup.c  config_manager.c  config_manager.h  error_handler.c  error_handler.h  esp_sip.c  esp_sip.h  io_events.c  io_events.h  io_manager.c  io_manager.h  sip_integration.c  sip_io_integration.c  sip_io_integration.h  sip_manager.c  sip_manager.h  test_app_main.c  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
test/: CMakeLists.txt  test_app_controller.c  test_app_integration.c  test_config_env.c  test_config_manager.c  test_config_storage.c  test_end_to_end_integration.c  test_error_handler.c  test_hardware_abstraction.c  test_io_events.c  test_io_integration.c  test_io_manager.c  test_main.c  test_performance_reliability.c  test_sip_io_integration.c  test_sip_manager.c  test_web_api.c  test_web_ip_logging.c  test_web_server.c  test_web_server_hal.c  test_web_virtual_io.c  test_web_websocket.c  test_wifi_manager.c
test/mocks/: mock_esp_event.c  mock_esp_event.h  mock_esp_netif.c  mock_esp_netif.h  mock_esp_sip.c  mock_esp_sip.h  mock_esp_timer.c  mock_esp_timer.h  mock_esp_wifi.c  mock_esp_wifi.h  mock_freertos.c  mock_freertos.h  mock_gpio.c  mock_gpio.h  mock_http_server.c  mock_http_server.h  mock_nvs.c  mock_nvs.h
web_root/: app.js  index.html  style.css
