idf_component_register(SRCS "test_main.c" "test_config_manager.c" "test_config_storage.c" "test_config_env.c" "test_io_manager.c" "test_io_events.c" "test_io_integration.c" "test_sip_manager.c" "test_sip_io_integration.c" "test_web_server.c" "test_web_api.c" "test_web_virtual_io.c" "test_web_websocket.c" "test_web_ip_logging.c" "test_app_controller.c" "test_app_integration.c" "test_error_handler.c" "test_hardware_abstraction.c" "test_web_server_hal.c" "test_end_to_end_integration.c" "test_performance_reliability.c" "test_wifi_manager.c" "mocks/mock_nvs.c" "mocks/mock_gpio.c" "mocks/mock_esp_sip.c" "mocks/mock_esp_timer.c" "mocks/mock_freertos.c" "mocks/mock_http_server.c" "mocks/mock_esp_wifi.c" "mocks/mock_esp_netif.c" "mocks/mock_esp_event.c"
                    INCLUDE_DIRS "." "mocks" "../main"
                    REQUIRES unity main nvs_flash driver esp_event esp_timer esp_http_server spiffs json esp_wifi)